--- a/01-Node.js-Module-System-Notes-App/03-Importing-npm-Modules/package.json
+++ b/01-Node.js-Module-System-Notes-App/03-Importing-npm-Modules/package.json
@@ -1,7 +1,6 @@
 {
   "name": "notes-app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/validator": "^13.1.0",
     "validator": "^13.1.17"
-  }
+  },
+  "dependencies": {},
+  "keywords": [],
+  "description": ""
 }
