02-Argument-Parsing-with-Yargs

--- a/02-File-System-and-Command-Line-Args-Notes-App/02-Argument-Parsing-with-Yargs/package.json
+++ b/02-File-System-and-Command-Line-Args-Notes-App/02-Argument-Parsing-with-Yargs/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/validator": "^13.1.0",
+    "@types/yargs": "^15.0.5",
     "chalk": "^4.1.0",
     "validator": "^13.1.17",
     "yargs": "^16.0.3"
